--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "ws": "^8.16.0",
     "dotenv": "^16.4.5",
     "body-parser": "^1.20.2",
-    "@google/generative-ai": "^0.3.1"
+    "node-fetch": "^3.3.2"
   }
 }
