--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "ai-voice-server",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "ws": "^8.16.0",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
-    "body-parser": "^1.20.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "ws": "^8.17.0",
+    "form-data": "^4.0.0"
   }
 }
