--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
+  "name": "ai-voice-server",
+  "version": "1.0.0",
+  "description": "AI Voice Server using Express, WebSocket, Twilio, ElevenLabs STT/TTS, and GPT-4o-mini",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [
+    "express",
+    "twilio",
+    "voice",
+    "ai",
+    "openai",
+    "elevenlabs",
+    "websocket"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2",
-    "ws": "^8.18.0",
-    "dotenv": "^16.4.5",
     "body-parser": "^1.20.2",
-    "node-fetch": "^3.3.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
