--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "twilio-voice-ai-server",
+  "name": "twilio-media-streams-ai-server",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "ws": "^8.17.0",
+    "ws": "^8.18.0",
     "dotenv": "^16.4.5",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "node-fetch": "^3.3.2"
   }
 }
