--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
-  "name": "twilio-elevenlabs-voice-ai",
-  "version": "1.0.0",
-  "description": "Node.js server for Twilio ConversationRelay with ElevenLabs STT and TTS + OpenAI GPT responses.",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "express": "^4.21.1",
-    "ws": "^8.17.0",
-    "dotenv": "^16.4.5",
-    "body-parser": "^1.20.3",
-    "node-fetch": "^3.3.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "author": "gb",
-  "license": "MIT"
-}
+    "name": "twilio-voice-ai-server",
+    "version": "1.0.0",
+    "type": "module",
+    "main": "server.js",
+    "scripts": {
+      "start": "node server.js"
+    },
+    "dependencies": {
+      "express": "^4.19.2",
+      "ws": "^8.17.0",
+      "dotenv": "^16.4.5",
+      "body-parser": "^1.20.2",
+      "node-fetch": "^3.3.2"
+    }
+  }
