--- a/package.json
+++ b/package.json
@@ -1,16 +1,36 @@
 {
-    "name": "twilio-voice-ai-server",
-    "version": "1.0.0",
-    "type": "module",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "express": "^4.19.2",
-      "ws": "^8.17.0",
-      "dotenv": "^16.4.5",
-      "body-parser": "^1.20.2",
-      "node-fetch": "^3.3.2"
-    }
-  }
+  "name": "ai-voice-server",
+  "version": "1.0.0",
+  "description": "Node.js server for Twilio Voice AI agent with Whisper STT, GPT response, and Gemini TTS",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "ws": "^8.18.0",
+    "node-fetch": "^3.3.2",
+    "form-data": "^4.0.0",
+    "twilio": "^4.22.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "twilio",
+    "voice",
+    "ai",
+    "gemini",
+    "whisper",
+    "gpt",
+    "tts",
+    "stt",
+    "real-time",
+    "nodejs"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
+}
