--- a/package.json
+++ b/package.json
@@ -1,36 +1,21 @@
 {
-    "name": "ai-voice-server",
-    "version": "1.0.0",
-    "description": "Node.js server for Twilio Voice AI agent with Whisper STT, GPT response, and Gemini TTS",
-    "main": "index.js",
-    "type": "module",
-    "scripts": {
-      "start": "node index.js",
-      "dev": "nodemon index.js"
-    },
-    "dependencies": {
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "ws": "^8.18.0",
-      "node-fetch": "^3.3.2",
-      "form-data": "^4.0.0",
-      "twilio": "^4.22.0"
-    },
-    "engines": {
-      "node": ">=18.0.0"
-    },
-    "keywords": [
-      "twilio",
-      "voice",
-      "ai",
-      "gemini",
-      "whisper",
-      "gpt",
-      "tts",
-      "stt",
-      "real-time",
-      "nodejs"
-    ],
-    "author": "Your Name",
-    "license": "MIT"
+  "name": "ai-voice-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "ws": "^8.18.0",
+    "node-fetch": "^3.3.2",
+    "formdata-node": "^6.0.0",
+    "twilio": "^4.22.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
+}
