--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ws": "^8.18.0",
     "node-fetch": "^3.3.2",
-    "formdata-node": "^6.0.0"
+    "formdata-node": "^6.0.0",
+    "twilio": "^4.22.0"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "engines": { "node": ">=18.0.0" }
 }
