--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google-cloud/speech": "^6.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ws": "^8.18.0",
