--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.21.1",
     "node-fetch": "^3.3.2",
     "twilio": "^4.22.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "wav-encoder": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
