--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-    "name": "ai-voice-server",
-    "version": "1.0.0",
-    "main": "server.js",
-    "type": "module",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    },
-    "dependencies": {
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "ws": "^8.18.0",
-      "node-fetch": "^3.3.2",
-      "formdata-node": "^6.0.0",
-      "twilio": "^4.22.0",
-      "wav-encoder": "^1.3.0"
-    },
-    "engines": {
-      "node": ">=18.0.0"
-    }
-  }
+  "name": "ai-voice-assistant",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "Voice assistant using Twilio, Google Streaming STT, GPT, and ElevenLabs TTS",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "@google-cloud/speech": "^6.5.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "twilio": "^4.16.0",
+    "vad": "^1.0.1",
+    "wav-encoder": "^1.5.0",
+    "ws": "^8.17.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "author": "Your Name",
+  "license": "MIT"
+}
