--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "ai-voice-server",
+  "name": "voice-agent",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@google-cloud/speech": "^6.4.0",
-    "dotenv": "^16.3.1",
+    "@google-cloud/speech": "^5.0.0",
     "express": "^4.18.2",
-    "node-fetch": "^3.4.2",
-    "twilio": "^4.14.0",
-    "wav-encoder": "^1.7.0",
-    "formdata-node": "^4.1.0"
-  },
-  "engines": {
-    "node": "20.x"
+    "ws": "^8.14.0",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.2",
+    "twilio": "^4.15.0",
+    "wav-encoder": "^1.5.0",
+    "formdata-node": "^6.3.0"
   }
 }
