--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-    "name": "ai-voice-server",
-    "version": "1.0.0",
-    "main": "server.js",
-    "type": "module",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    },
-    "dependencies": {
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "ws": "^8.18.0",
-      "node-fetch": "^3.3.2",
-      "formdata-node": "^6.0.0",
-      "twilio": "^4.22.0",
-      "wav-encoder": "^1.3.0"
-    },
-    "engines": {
-      "node": ">=18.0.0"
-    }
+  "name": "voice-agent",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "@google-cloud/speech": "^5.0.0",
+    "express": "^4.18.2",
+    "ws": "^8.14.0",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.2",
+    "twilio": "^4.15.0",
+    "wav-encoder": "^1.5.0",
+    "formdata-node": "^6.3.0"
   }
+}
