--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "ai-voice-server",
-    "version": "1.0.0",
-    "main": "server.js",
-    "type": "module",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    },
-    "dependencies": {
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "ws": "^8.18.0",
-      "node-fetch": "^3.3.2",
-      "formdata-node": "^6.0.0",
-      "twilio": "^4.22.0",
-      "wav-encoder": "^1.3.0"
-    },
-    "engines": {
-      "node": ">=18.0.0"
-    }
+  "name": "ai-voice-server",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "@google-cloud/speech": "^7.2.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "formdata-node": "^6.0.3",
+    "node-fetch": "^3.3.2",
+    "twilio": "^5.10.4",
+    "wav-encoder": "^1.3.0",
+    "ws": "^8.18.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
+}
