--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "ai-voice-server",
+  "name": "gemini-tts-server",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Custom TTS server using Gemini for Vapi",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@google-cloud/speech": "^7.2.1",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "formdata-node": "^6.0.3",
-    "node-fetch": "^3.3.2",
-    "twilio": "^5.10.4",
-    "wav-encoder": "^1.3.0",
-    "ws": "^8.18.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   }
 }
