--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "gemini-tts-server",
-  "version": "1.0.0",
-  "description": "Custom TTS server using Gemini for Vapi",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
-  }
+"name": "recall-heygen-bridge",
+"version": "1.0.0",
+"type": "module",
+"scripts": {
+"start": "node server/index.js"
+},
+"dependencies": {
+"axios": "^1.5.0",
+"body-parser": "^1.20.2",
+"dotenv": "^16.6.0",
+"express": "^4.18.2"
+}
 }
