--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-"name": "recall-heygen-bridge",
-"version": "1.0.0",
-"type": "module",
-"scripts": {
-"start": "node server/index.js"
-},
-"dependencies": {
-"axios": "^1.5.0",
-"body-parser": "^1.20.2",
-"dotenv": "^16.6.0",
-"express": "^4.18.2"
-}
+  "name": "recall-heygen-bridge",
+  "version": "1.0.0",
+  "description": "Bridge server for Recall.ai, HeyGen, OpenAI and ElevenLabs",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
+  }
 }
