--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "recall-heygen-bridge",
   "version": "1.0.0",
-  "description": "Bridge server for Recall.ai, HeyGen, OpenAI and ElevenLabs",
-  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.6.0",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
