--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "recall-heygen-bridge",
+  "name": "avatar-server",
   "version": "1.0.0",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "dotenv": "^16.6.0",
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=18"
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2",
+    "form-data": "^4.0.0",
+    "node-fetch": "^3.3.2"
   }
 }
