--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "avatar-server",
   "version": "1.0.0",
+  "description": "AI avatar voice server connecting Recall.ai → ElevenLabs STT → OpenAI → HeyGen",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "express": "^4.19.2",
-    "form-data": "^4.0.0",
-    "node-fetch": "^3.3.2"
+    "express": "^4.21.1",
+    "dotenv": "^16.4.5",
+    "body-parser": "^1.20.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
