--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "avatar-server",
   "version": "1.0.0",
-  "description": "AI avatar voice server connecting Recall.ai → ElevenLabs STT → OpenAI → HeyGen",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.21.1",
-    "dotenv": "^16.4.5",
-    "body-parser": "^1.20.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   }
 }
