--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "avatar-server",
   "version": "1.0.0",
+  "description": "Real-time AI avatar for Google Meet via Recall.ai → GPT → HeyGen",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.6.1",
-    "express": "^4.18.2",
-    "uuid": "^9.0.1"
+    "express": "^4.21.1",
+    "dotenv": "^16.4.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
