--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "avatar-server",
+  "name": "server",
   "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon index.js"
   },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
+    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "dotenv": "^16.4.5"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "ws": "^8.18.0"
   }
 }
