--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "server",
+  "name": "google-meet-realtime-bot",
   "version": "1.0.0",
-  "main": "/server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
-    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "dotenv": "^16.4.5",
+    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta"
   }
 }
