--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "express": "^4.21.1",
     "ws": "^8.18.0",
-    "dotenv": "^16.4.5",
-    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta"
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
