--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "google-meet-realtime-bot",
-  "version": "1.0.0",
+  "name": "heygen-google-meet-avatar",
   "type": "module",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
   "dependencies": {
-    "express": "^4.21.1",
-    "ws": "^8.18.0",
-    "dotenv": "^16.4.5"
+    "express": "^4.18.2",
+    "ws": "^8.14.2",
+    "dotenv": "^16.3.1",
   },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+  "scripts": {
+    "start": "node server.js"
   }
 }
