--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.2",
     "ws": "^8.14.2",
     "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.2"
   },
   "scripts": {
     "start": "node server.js"
